
package logica;

public interface Cuidable {
    void alimentar();
    void jugar();
}
