
package logica;

import java.util.List;

public class Jaula {
    private String nombre;
    private String estado;
    private int capacidadMaxima;
    private Cuidador cuidador;
    private List<Animal> animales;
    
    public Jaula(){}
    
    public Jaula(String nombre, String estado, int capacidadMaxima, Cuidador cuidador, List<Animal> animales){
        
    }
}
